--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,122 +1,7 @@
 
 {% include head.html %}
 
-
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-	  
-	  <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><img src="/assets/images/prebid_white_icon_200x35.png"></a>
-    </div>
-    
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse collapse">
-    	<ul class="nav navbar-nav navbar-right">
-
-            <li class="dropdown">
-
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    Products
-                    <span class="caret" />
-                </a>
-
-                <ul class="dropdown-menu">
-                    <li class="dropdown-submenu">
-                        <a href="#">Prebid.js</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Analytics</a></li>
-                            <li><a href="#">Modules</a></li>
-                            <li><a href="#">Plugins</a></li>
-                            <li><a href="#">React-Prebid</a></li>
-                        </ul>
-					</li>
-					<!-- /Prebid.js submenu-->
-			
-			
-                    <li>
-                    	<a href="#">Prebid Server</a></li>
-						
-                    <!--Prebid Mobile Submenu-->
-                    <li class="dropdown-submenu">
-                    	<a href="#">Prebid Mobile</a>
-						<ul class="dropdown-menu">
-                            <li><a href="#">iOS</a></li>
-                            <li><a href="#">Android</a></li>
-                        </ul>
-                    </li>
-                    
-					<li><a href="#">Debugging Extension</a>
-					
-					<li class="dropdown-submenu">
-						<a href="#">Formats</a>
-						<ul class="dropdown-menu">
-                            <li><a href="#">Display</a></li>
-                            <li><a href="#">Video</a></li>
-                            <li><a href="#">Native</a></li>
-                            <li><a href="#">AMP</a></li>
-                            <li><a href="#">Mulit-Format</a></li>
-                        </ul>
-					</li>
-                </ul>
-                
-            </li>
-
-            <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Support<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Ad Ops</a></li>
-	            <li class="dropdown-submenu">
-	            	<a href="#">Help</a>
-	            	<ul class="dropdown-menu">
-                        <li><a href="#">Troubleshooting</a></li>
-                        <li><a href="#">Training Videos</a></li>
-                    </ul>
-	            </li>
-	            <li class="dropdown-submenu">
-	            	<a href="#">FAQs</a>
-	            	<ul class="dropdown-menu">
-                        <li><a href="#">Prebid.js</a></li>
-                        <li><a href="#">Prebid Server</a></li>
-                    </ul>
-	            </li>
-	            <li><a href="#">Blog</a></li>
-	          </ul>
-            </li>
-    
-            <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Download<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Prebid.js</a></li>
-	            <li class="dropdown-submenu">
-	            	<a href="#">Prebid Mobile</a>
-	            	<ul class="dropdown-menu">
-                        <li><a href="#">iOS</a></li>
-                        <li><a href="#">Android</a></li>
-                    </ul>
-	            </li>
-	          </ul>
-	        </li>
-    
-            <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">About Prebid</a></li>
-	            <li><a href="#">Project Principles</a></li>
-	            <li><a href="#">Contributing</a></li>
-	            <li><a href="#">About Us</a></li>
-	            <li><a href="#">Partners</a></li>
-	          </ul>
-	        </li>       
-        </ul>      	
-    </div>
-  </div>
-</nav>
+{% include nav.html %}
     
   <div id="headerwrap">
 	  <div class="row">
@@ -251,44 +136,7 @@
 
   
 
-  <div id="copyrights">
-    <div class="container">
-	    
-	    <div class="bs-docs-social">
-            <ul class="bs-docs-social-buttons">
-
-                    <li>
-                        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=prebid&amp;repo=Prebid.js&amp;type=watch&amp;count=true" width="90" height="20" title="Star on GitHub"></iframe>
-                    </li>
-                    <li>
-                        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=prebid&amp;repo=Prebid.js&amp;type=fork&amp;count=true" width="90" height="20" title="Fork on GitHub"></iframe>
-                    </li>
-                                     
-            </ul>
-        </div>
-        
-        <div class="credits">
-			<p>All demos, instructions, documentation and code included on the Prebid.org website are released under the <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License</a>.
-		    </p>
-		
-		    <p>
-		        Documentation template by the <a href="http://getbootstrap.com/">Bootstrap team</a>, generated with <a href="https://github.com/mistic100/jekyll-bootstrap-doc">Jekyll Bootstrap Doc</a>.<br>Currently v1.0.0 | <a href="https://github.com/prebid/">Github</a>
-		    </p>
-		   
-        </div>
-      
-      <div class="credits">
-        <!--
-          You are NOT allowed to delete the credit link to TemplateMag with free version.
-          You can delete the credit link only if you bought the pro version.
-          Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/flatty-bootstrap-app-landing-page-template/
-          Licensing information: https://templatemag.com/license/
-        -->
-        Created with Flatty template by <a href="https://templatemag.com/">TemplateMag</a>
-      </div>
-    </div>
-  </div>
-  <!-- / copyrights -->
+  {% include footer.html %}
 
 
 
