Changed homepage text

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
   <div id="headerwrap">
 	  <div class="row">
 		  <h1>Header bidding unwrapped</h1>
-		  <h2>Earn more from your advertising with Prebid, a transparent, open-source solution that provides a fast and responsive experience.</h2>
+		  <h2>Earn more from your advertising with Prebid, a transparent, open-source solution that increases advertiser demand while maintaining a fast and responsive user experience.</h2>
         <div class="col-lg-6">
         </div>
 	    <div>
@@ -29,7 +29,6 @@
     <div class="row mt centered">
       <div class="col-lg-6 col-lg-offset-3">
         <h1>The Benefits Of Using Prebid.</h1>
-        <h3>Some real good marketing text to lead us into the four benefits we list below!</h3>
       </div>
     </div>
     <!-- /row -->
@@ -99,7 +98,6 @@
     <div class="row mt centered">
       <div class="col-lg-6 col-lg-offset-3">
         <h1>Prebid News.</h1>
-        <h3>Based on the meeting yesterday I thought we might do a carousel of news...</h3>
       </div>
     </div>
     <!-- /row -->
