--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -3,7 +3,7 @@
 {% include nav.html %}
 
 
-<div class="container bs-docs-container" style="margin-top:50px; left:0px; width:100%; padding:50px 50px;">
+<div class="container bs-docs-container" style="margin-top:50px; left:0px; width:100%; padding:50px 50px;>
 	
 	<div container>
 		<div class="row">
