--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ i {
 	font-size: 14px;
 	background-color: transparent;
 	margin:0;
-	padding: 0 0 8px 20px;
+	padding: 3px 0 8px 5px;
 }
 
 a.list-group-item:hover,
@@ -277,9 +277,15 @@ button.list-group-item:focus {
   background-color: #cccccc;
 }
 
-.sidebar { 
-	margin-top: 35px;
+.list-group-item-header { 
+	color: #333333;
 }
+
+.sidebar { 
+	margin-top: 30px;
+}
+
+
 
 
 /* responsive */
