--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,8 @@
     
     
 	<!-- Favicons -->
-	<link href="images/favicon.png" rel="icon">
-	<link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+	<link href="{{site.baseurl}}/assets/images/favicon.png" rel="icon">
+	<link href="{{site.baseurl}}/assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
