--- a/_layouts/bidder.html
+++ b/_layouts/bidder.html
@@ -9,7 +9,11 @@
 
         <div class="row">
 
-            {% include left_nav.html %}
+            <div class="col-md-3">
+                <div class="docs-sidebar">
+                    {% include left_nav.html %}
+                </div>
+            </div>
 
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
