--- a/_layouts/fourofour.html
+++ b/_layouts/fourofour.html
@@ -2,6 +2,10 @@
 
 {% include nav.html %}
 
-	<div class="container bs-docs-container 404error">
-		<img src="/assets/images/404error.png">
+	<div class="container bs-docs-container error404">
+		
+		<h1>404</h1>
+		<h3>The page you are looking for cannot be found or does not exist.</h3>
+		<p><img src="/assets/images/404image.png"></p>
+	
 	</div>
