Fixed menu issues.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
 	  
 	  <div class="header-links">
 		  <ul>
-			  <li><img src="/assets/images/icons/icnDevelopers_wh-sh.png"><br>Developers</li>
+			  <li><a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><br>Developers</li>
 			  <li><img src="/assets/images/icons/icnGetStarted_wh-sh.png"><br>Get Started!</li>
 			  <li><img src="/assets/images/icons/icnAdOps_wh-sh.png"><br>Ad Ops</li>
 		  </ul>
